src/objects/E2CP__New_Comment_Action__c.object
<CustomObject>
    <fields>
        <fullName>E2CP__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Active records will be displayed on the New Comment page.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2CP__Label__c</fullName>
        <inlineHelpText>The text to be displayed on the button.</inlineHelpText>
        <label>Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>E2CP__Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Page_Order__c</fullName>
        <inlineHelpText>The order in which the buttons will display on the New Comment page.</inlineHelpText>
        <label>Page Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E2CP__URL__c</fullName>
        <inlineHelpText>The URL which the user will be navigated to after the comment is saved.</inlineHelpText>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>New Comment Action</label>
    <listViews>
        <fullName>E2CP__All_New_Comment_Actions</fullName>
        <columns>NAME</columns>
        <columns>E2CP__Active__c</columns>
        <columns>E2CP__Page_Order__c</columns>
        <columns>E2CP__Label__c</columns>
        <columns>E2CP__Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All New Comment Actions</label>
    </listViews>
    <nameField>
        <displayFormat>NCA-{000000}</displayFormat>
        <label>Custom Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Comment Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>